fix(core/pill): adapt spacing for text and icon (#1658)

--- a/packages/angular-test-app/src/preview-examples/pill.css
+++ b/packages/angular-test-app/src/preview-examples/pill.css
@@ -16,5 +16,13 @@ ix-pill {
 }
 
 .styled {
-  width: 8rem
+  width: 8rem;
+}
+
+.styled-ellipsis-3 {
+  width: 3rem;
+}
+
+.styled-ellipsis-4 {
+  width: 4rem;
 }
